@@ -7,6 +7,7 @@
   set to the default value
 * added strbol validation
 * nil long options are now respected
+* refactored default_config to defaults in ConfigParser
 
 == 0.5.0 / 2009-05-25
 
